# mlrs

./: Cargo.toml  LICENSE  README.md
benches/: dev.rs
benches/darray/: constructors_bench.rs  indexing_bench.rs  linalg_bench.rs  math_arithmetic_bench.rs  math_comparison_bench.rs  math_unary_bench.rs  random_bench.rs  reductions_axis_bench.rs  reductions_cumulative_bench.rs  reductions_scalar_bench.rs  shape_combine_bench.rs  shape_repeat_bench.rs  shape_transform_bench.rs  sorting_bench.rs
benches/linear_model/: elastic_net_bench.rs  lasso_bench.rs  linear_regression_bench.rs  logistic_regression_bench.rs  ridge_bench.rs
benches/metrics/: classification_bench.rs  model_selection_bench.rs  regression_bench.rs
examples/: gpt2.rs
src/: lib.rs  main.rs
src/darray/: array.rs  constructors.rs  error.rs  indexing.rs  linalg.rs  mod.rs  random.rs
src/darray/math/: arithmetic.rs  comparison.rs  mod.rs  unary.rs
src/darray/np/: constructors.rs  indexing.rs  linalg.rs  math.rs  mod.rs  random.rs  reductions.rs  shape.rs  sorting.rs
src/darray/reductions/: axis_indices.rs  axis_stats.rs  cumulative.rs  mod.rs  scalar.rs
src/darray/shape/: combine.rs  mod.rs  repeat.rs  transform.rs
src/darray/sorting/: locations.rs  mod.rs  order.rs  search.rs  search_side.rs
src/darray/utils/: broadcast.rs  layout.rs  mapping.rs  mod.rs  simd.rs
src/linear_model/: error.rs  fit.rs  lasso.rs  linear_regression.rs  metrics.rs  mod.rs  predict.rs  prediction.rs  ridge.rs  training.rs  validation.rs
src/linear_model/classification/: logistic_regression.rs  mod.rs
src/linear_model/common/: error.rs  math.rs  mod.rs  prediction.rs  training.rs  validation.rs
src/linear_model/regression/: elastic_net.rs  lasso.rs  linear_regression.rs  mod.rs  ridge.rs
src/metrics/: error.rs  mod.rs
src/metrics/classification/: confusion.rs  mod.rs  scores.rs  types.rs  validation.rs
src/metrics/model_selection/: cross_validation.rs  estimator.rs  mod.rs  split.rs  types.rs  validation.rs
src/metrics/regression/: absolute.rs  aggregation.rs  aliases.rs  context.rs  deviance.rs  mod.rs  scores.rs  squared.rs  types.rs  validation.rs
src/preprocessing/: error.rs  mod.rs
src/preprocessing/common/: mod.rs  simd.rs  statistics.rs  validation.rs
src/preprocessing/encoding/: handle_unknown.rs  label_encoder.rs  mod.rs  one_hot_encoder.rs  ordinal_encoder.rs  ordinal_handle_unknown.rs
src/preprocessing/feature_generation/: combinations.rs  mod.rs  polynomial_features.rs
src/tree/: decision_tree.rs  extra_trees_classifier.rs  gradient_boosting_machine.rs  mod.rs  random_forest.rs
(+24 files in other folders)
